@@ -5,12 +5,13 @@
 \title{Generate harmonics}
 \usage{
 generateHarmonics(pitch, glottisAnchors = 0, attackLen = 50,
-  nonlinBalance = 0, nonlinDep = 50, jitterDep = 0, jitterLen = 1,
-  vibratoFreq = 5, vibratoDep = 0, shimmerDep = 0, creakyBreathy = 0,
-  rolloff = -9, rolloffOct = -3, rolloffKHz = -3, rolloffParab = 0,
-  rolloffParabHarm = 3, rolloff_perAmpl = 3, temperature = 0.025,
-  pitchDriftDep = 0.5, pitchDriftFreq = 0.125, amplDriftDep = 5,
-  subDriftDep = 4, rolloffDriftDep = 3, randomWalk_trendStrength = 0.5,
+  nonlinBalance = 0, nonlinDep = 50, nonlinRandomWalk = NULL,
+  jitterDep = 0, jitterLen = 1, vibratoFreq = 5, vibratoDep = 0,
+  shimmerDep = 0, creakyBreathy = 0, rolloff = -9, rolloffOct = -3,
+  rolloffKHz = -3, rolloffParab = 0, rolloffParabHarm = 3,
+  rolloff_perAmpl = 3, temperature = 0.025, pitchDriftDep = 0.5,
+  pitchDriftFreq = 0.125, amplDriftDep = 5, subDriftDep = 4,
+  rolloffDriftDep = 3, randomWalk_trendStrength = 0.5,
   shortestEpoch = 300, subFreq = 100, subDep = 0, amplAnchors = NA,
   overlap = 75, samplingRate = 16000, pitchFloor = 75,
   pitchCeiling = 3500, pitchSamplingRate = 3500, throwaway = -80)
@@ -36,6 +37,9 @@ entire sound has jitter + subharmonics. Ignored if temperature = 0}
 \item{nonlinDep}{hyperparameter for regulating the intensity of
 subharmonics and jitter, 0 to 100\% (50\% = jitter and subharmonics are as
 specified, <50\% weaker, >50\% stronger). Ignored if temperature = 0}
+
+\item{nonlinRandomWalk}{a numeric vector specifying the timing of nonliner
+regimes: 0 = none, 1 = subharmonics, 2 = subharmonics + jitter + shimmer}
 
 \item{jitterDep}{cycle-to-cycle random pitch variation, semitones}
 
