@@ -1,4 +1,10 @@
           CHANGES IN SOUNDGEN VERSION 1.1.3 [...date...]
+NEW FUNCTIONS:
+  * spectrogramFolder(): extracts and saves spectrograms of all .wav files in a folder, creates an html file with a table of click-to-play spectrograms
+
+MINOR:
+  * soundgen(): new argument, nonlinRandomWalk, for specifying the exact timing of each vocal regime (0 = none, 1 = subharmonics, 2 = subharmonics + jitter + shimmer); this is intended for making reproducible examples of sounds with nonlinear effects
+  * getSmoothContour(): proper handling and plotting of anchors that need downsampling, interpolation exactly through the specified anchors with interpol = 'approx'
 
           CHANGES IN SOUNDGEN VERSION 1.1.2 [23-January-2018]
 NEW FUNCTIONS:
